--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,20 @@
           <label for="email">Email:</label>
           <input type="email" id="email" class="form-control" ngModel name="email">
         </div>
+        <div class="form-group">
+          <label for="subscription">Subscription:</label>
+          <select name="subscription" id="subscription" class="form-control">
+            <option value="basic">Basic</option>
+            <option value="advanced">Advanced</option>
+            <option value="pro">Pro</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" class="form-control">
+        </div>
+        <hr>
+        <button class="btn btn-primary">Submit</button>
       </form>
     </div>
   </div>
