--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,26 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <h1 class="text-center">Subscription</h1>
       <form #f="ngForm">
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" class="form-control" ngModel name="email">
+          <input type="email" id="email" class="form-control" ngModel name="email" required>
         </div>
         <div class="form-group">
           <label for="subscription">Subscription:</label>
-          <select name="subscription" id="subscription" class="form-control">
-            <option value="basic">Basic</option>
-            <option value="advanced">Advanced</option>
-            <option value="pro">Pro</option>
+          <select name="subscription" id="subscription" class="form-control" [ngModel]="defaultSub">
+            <option *ngFor="let sub of subscriptions" [value]="sub">{{sub.charAt(0).toUpperCase() + sub.slice(1)}}</option>
           </select>
         </div>
         <div class="form-group">
           <label for="password">Password:</label>
-          <input type="password" name="password" id="password" class="form-control">
+          <input type="password" name="password" id="password" class="form-control" ngModel required>
         </div>
         <hr>
+        <p class="alert alert-warning" *ngIf="f.invalid && f.touched">
+          Warning! The form is invalid!
+        </p>
         <button class="btn btn-primary">Submit</button>
       </form>
     </div>
