--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <p class="alert alert-warning" *ngIf="f.invalid && f.touched">
           Warning! The form is invalid!
         </p>
-        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary" (click)="onSubmit()" [disabled]="f.invalid">Submit</button>
       </form>
     </div>
   </div>
