--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <h1 class="text-center">Subscription</h1>
-      <form #f="ngForm">
+      <form #f="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Email:</label>
           <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
@@ -27,7 +27,7 @@
         <p class="alert alert-warning" *ngIf="f.invalid && f.touched">
           Warning! The form is invalid!
         </p>
-        <button class="btn btn-primary" (click)="onSubmit()" [disabled]="f.invalid">Submit</button>
+        <button class="btn btn-primary" [disabled]="f.invalid">Submit</button>
       </form>
     </div>
   </div>
